--- a/canary/canary-preview-ingress.yaml
+++ b/canary/canary-preview-ingress.yaml
@@ -8,7 +8,7 @@ metadata:
     ingress.kubernetes.io/app-root: /
 spec:
   rules:
-  - host: canary-preview.dev.argoproj.io
+  - host: canary-preview.isdev.argoproj.io
     http:
       paths:
       - path: /
