--- a/canary/canary-ingress.yaml
+++ b/canary/canary-ingress.yaml
@@ -8,7 +8,7 @@ metadata:
     ingress.kubernetes.io/app-root: /
 spec:
   rules:
-  - host: canary.dev.argoproj.io
+  - host: canary.isdev.argoproj.io
     http:
       paths:
         - path: /
